--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 myfile filter=lfs diff=lfs merge=lfs -text
+frontend/node_modules/.cache/default-development/16.pack filter=lfs diff=lfs merge=lfs -text
+frontend/node_modules/.cache/default-development/15.pack filter=lfs diff=lfs merge=lfs -text
